--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -4,12 +4,18 @@
 @tailwind utilities;
 @tailwind components;
 
+
+/* footer titles */
+footer h3 {
+    @apply font-roboto font-semibold;
+}
+
 /* inquiries background */
 .inquiriesBg {
     background-color: #272c26;
     opacity: 0.8;
     background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #272c26 15px ), repeating-linear-gradient( #0d17ca55, #0d17ca );
-    height:100%;
+    height:auto;
 }
 
 /* counts background */
