--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -25,7 +25,7 @@ footer h3 {
     background-position:center;
     background-repeat: no-repeat;
     background-size: cover;
-    height:400px;
+    height:auto;
 }
 /* school banner */
 .schoolBanner {
@@ -44,6 +44,9 @@ footer h3 {
     height:auto;
 }
 /* enroll button */
+.Btn:hover {
+    transition:0.4s ease-in-out;
+}
 .arrow {
     display:none;
     color:white;
